--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
         <!-- ローディング画面 -->
     <div id="loading">
-        <p>Loading...</p>
+        <p >LOADING...</p>
         <div id="loading-screen"></div>
     </div>
 
